# buildsys-dateversion

./: .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  renovate.json  requirements.in  test-requirements-py310.txt  test-requirements-py311.txt  test-requirements-py38.txt  test-requirements-py39.txt  test-requirements.in  tox.ini
.github/workflows/: ci.yml  pip-compile-submit.yml  pip-compile.yml  release.yml  tox.yml
src/buildsys_dateversion/: __init__.py  _hooks.py
tests/: test_sample_projects.py
tests/sample_projects/sample_flit3/: pyproject.toml
tests/sample_projects/sample_flit3/sample_flit3/: __init__.py
tests/sample_projects/sample_setuptools/: pyproject.toml
tests/sample_projects/sample_setuptools/sample_setuptools/: __init__.py
