[project]
name = "buildsys-dateversion"
requires-python = ">= 3.8"
dynamic = ["dependencies", "version"]

[tool.setuptools.dynamic]
version = {attr = "buildsys_dateversion.__version__"}
dependencies = {file = "requirements.in"}

[build-system]
requires = []
backend-path = ["src"]
build-backend = "buildsys_dateversion"
